[package]
name = "fstsed"
version = "0.1.0"
edition = "2021"

description = "Find and replace/decorate text at scale using finite state transducers (fst)"
authors = ["Eric Hutchins"]
license = "Unlicense/MIT"
repository = "https://github.com/erichutchins/fstsed"
readme = "README.md"
categories = ["text-processing", "command-line-interface"]
keywords = ["cli", "fst", "sed", "dfir"]

[[bin]]
name = "fstsed"
path = "src/main.rs"

[profile.release]
debug = true
lto = "fat"
codegen-units = 1

[dependencies]
anyhow = "1.0.69"
bstr = "1.3.0"
camino = "1.1.3"
clap = { version = "4.1.6", features = ["derive", "cargo"] }
fst = "0.4.7"
grep-cli = "0.1.7"
itermore = { version = "0.5.0",  default-features = false, features = ["array_chunks"]}
lazy_static = "1.4.0"
memchr = "2.5.0"
memmap2 = "0.5.10"
microtemplate = "1.0.3"
regex = "1.7.1"
serde_json = "1.0.93"
termcolor = "1.2.0"
